--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Ma vie avant le code:</h1>
+<p>éducateur sportif: école international de Genève; canton de Genève; SMUC Marseille; SCO marseille</p>
