--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
-@import "banner";
+@import "section";
+@import "part";
+@import "avatar";
