--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>Ma vie avant le code:</h1>
-<p>éducateur sportif: école international de Genève; canton de Genève; SMUC Marseille; SCO marseille</p>
+<div class="home-component">
+  <section class="section-header">
+    <div class="bg-part-right"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 align-items-center full-height d-flex" style="background-color: black;">
+          <div class="avatar-container deadpool">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
