--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,10 @@
     <div class="bg-part-right"></div>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 align-items-center full-height d-flex" style="background-color: black;">
-          <div class="avatar-container deadpool">
+        <div class="col-md-5 align-items-center full-height d-flex" style="background-color: black;">
+          <div class="avatar-container">
+            <div class="deadpool">
+            </div>
           </div>
         </div>
       </div>
