--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,3 +1,11 @@
 .deadpool {
   background-image: image-url("deadpool-logo.jpg");
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  vertical-align: middle;
+  border-style: none;
+  background-repeat: no-repeat;
 }
