header section right part first try

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,10 +5,19 @@
       <div class="row">
         <div class="col-md-5 align-items-center full-height d-flex" style="background-color: black;">
           <div class="avatar-container">
-            <div class="deadpool">
-            </div>
+            <div class="deadpool"></div>
           </div>
         </div>
+          <div class="col align-items-center full-height d-flex bg-right-col" style="background-color: #1b1b1c">
+            <div class="info-container">
+              <h1 class="info-name">
+                <div class="first-name">Guillaume</div>
+                <div class="last-name">Dauplat</div>
+              </h1>
+              <div class="info-title">Full-stack Web Developer</div>
+              <div class="info-socials"></div>
+            </div>
+          </div>
       </div>
     </div>
   </section>
