--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,17 @@
                 <div class="last-name">Dauplat</div>
               </h1>
               <div class="info-title">Full-stack Web Developer</div>
-              <div class="info-socials"></div>
+              <div class="info-socials">
+                <a href="https://github.com/g33ktou">
+                  <span aria-hidden="true" class="fab fa-github"></span>
+                </a>
+                <a href="https://www.linkedin.com/in/guillaume-dauplat-326841164/">
+                  <span aria-hidden="true" class="fab fa-linkedin"></span>
+                </a>
+                <a href=https://www.facebook.com/guillaume.freaks">
+                  <span aria-hidden="true" class="fab fa-facebook"></span>
+                </a>
+              </div>
             </div>
           </div>
       </div>
