sociaux open new page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,13 +16,13 @@
               </h1>
               <div class="info-title">Full-stack Web Developer</div>
               <div class="info-socials">
-                <a href="https://github.com/g33ktou">
+                <a href="https://github.com/g33ktou" target="_blank" rel="noopener noreferrer">
                   <span aria-hidden="true" class="fab fa-github"></span>
                 </a>
-                <a href="https://www.linkedin.com/in/guillaume-dauplat-326841164/">
+                <a href="https://www.linkedin.com/in/guillaume-dauplat-326841164/" target="_blank" rel="noopener noreferrer">
                   <span aria-hidden="true" class="fab fa-linkedin"></span>
                 </a>
-                <a href=https://www.facebook.com/guillaume.freaks">
+                <a href=https://www.facebook.com/guillaume.freaks" target="_blank" rel="noopener noreferrer">
                   <span aria-hidden="true" class="fab fa-facebook"></span>
                 </a>
               </div>
