correctif lien fb

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
                 <a href="https://www.linkedin.com/in/guillaume-dauplat-326841164/" target="_blank" rel="noopener noreferrer">
                   <span aria-hidden="true" class="fab fa-linkedin"></span>
                 </a>
-                <a href=https://www.facebook.com/guillaume.freaks" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.facebook.com/guillaume.freaks" target="_blank" rel="noopener noreferrer">
                   <span aria-hidden="true" class="fab fa-facebook"></span>
                 </a>
               </div>
