--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,4 +32,58 @@
       </div>
     </div>
   </section>
+  <section class="section-curriculum">
+    <div class="bg-part-left"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 d-flex" style="background-color: #1b1b1c">
+          <div class="section-title">CV</div>
+        </div>
+        <div class="col align-items-center d-flex bg-left-col">
+          <div class="timeline-container">
+            <div class="timeline-item">
+              <div class="timeline-point"></div>
+              <div class="row">
+                <div class="col-md-5">
+                  <div class="timeframe">June 2018 - Present</div>
+                  <div class="heading">Freelance</div>
+                  <div class="title">Full-stack Developer</div>
+                  <div class="location">France</div>
+                </div>
+                <div class="col">
+                  put text here
+                </div>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-point"></div>
+              <div class="row">
+                <div class="col-md-5">
+                  <div class="timeframe">April 2018 - June 2018</div>
+                  <div class="heading">Certification in digital technology</div>
+                  <div class="title">Student</div>
+                  <div class="location">Marseille, France</div>
+                </div>
+                <div class="col">
+                  At le wagon, computer school, fundamental knowledge in web programming language, front-end and back-end
+                  <br>
+                  Ruby and coding basics (ruby, git)
+                  <br>
+                  Software engineering
+                  <br>
+                  Database and Sql (SQL, PostgreSQL)
+                  <br>
+                  Front-end (HTML5, CSS3, JS)
+                  <br>
+                  Rails (Rails, Heroku)
+                  <br>
+                  personal project (Urbantraining.eu)
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
