--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,15 @@
       flex-grow: 1;
       max-width: 100%;
     }
+    .section-curriculum .timeline-item .timeline-point{
+      -webkit-box-shadow: 0 0 0 6px #2d2c2c;
+              box-shadow: 0 0 0 6px #2d2c2c;
+    }
+    @media (max-width: 768px) {
+      .section-curriculum .bg-left-col {
+        padding: 20px 0 60px 40px;
+      }
+    }
     </style>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
