small change, @media inc

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,10 +36,10 @@
     <div class="bg-part-left"></div>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex" style="background-color: #1b1b1c">
+        <div class="col-md-4 d-flex">
           <div class="section-title">CV</div>
         </div>
-        <div class="col align-items-center d-flex bg-left-col">
+        <div class="col align-items-center d-flex bg-left-col" style="background-color: #1b1b1c">
           <div class="timeline-container">
             <div class="timeline-item">
               <div class="timeline-point"></div>
