--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,20 @@
       -webkit-box-shadow: 0 0 0 6px #2d2c2c;
               box-shadow: 0 0 0 6px #2d2c2c;
     }
+    /* media part*/
+
     @media (max-width: 768px) {
       .section-curriculum .bg-left-col {
         padding: 20px 0 60px 40px;
+      }
+    }
+
+    @media (max-width: 992px) {
+      .section-header .info-container .info-socials{
+        bottom: inherit;
+        right: inherit;
+        position: relative;
+        margin-left: 0.3rem;
       }
     }
     </style>
