--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,5 @@
 @import "alert";
 @import "navbar";
 @import "section";
-@import "part";
 @import "avatar";
-@import "container"
+@import "container";
