--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,45 +1,42 @@
 <div class="home-component">
   <section class="section-header">
-    <div class="bg-part-right"></div>
     <div class="container">
-      <div class="row">
-        <div class="col-md-5 align-items-center full-height d-flex" style="background-color: black;">
-          <div class="avatar-container">
-            <div class="deadpool"></div>
-          </div>
+      <div class="row" style="background-color: black;">
+        <div class="avatar-container" style="text-align: center;">
+          <div class="deadpool"></div>
         </div>
-          <div class="col align-items-center full-height d-flex bg-right-col" style="background-color: #1b1b1c">
-            <div class="info-container">
-              <h1 class="info-name">
-                <div class="first-name">Guillaume</div>
-                <div class="last-name">Dauplat</div>
-              </h1>
-              <div class="info-title">Full-stack Web Developer</div>
-              <div class="info-socials">
-                <a href="https://github.com/g33ktou" target="_blank" rel="noopener noreferrer">
-                  <span aria-hidden="true" class="fab fa-github"></span>
-                </a>
-                <a href="https://www.linkedin.com/in/guillaume-dauplat-326841164/" target="_blank" rel="noopener noreferrer">
-                  <span aria-hidden="true" class="fab fa-linkedin"></span>
-                </a>
-                <a href="https://www.facebook.com/guillaume.freaks" target="_blank" rel="noopener noreferrer">
-                  <span aria-hidden="true" class="fab fa-facebook"></span>
-                </a>
-              </div>
-              <hr>
-            </div>
+      </div>
+      <div class="row align-items" style="background-color: #1b1b1c">
+        <div class="info-container">
+          <h1 class="info-name">
+            <div class="first-name">Guillaume</div>
+            <div class="last-name">Dauplat</div>
+          </h1>
+          <div class="info-title">Full-stack Web Developer</div>
+          <div class="info-socials">
+            <a href="https://github.com/g33ktou" target="_blank" rel="noopener noreferrer">
+              <span aria-hidden="true" class="fab fa-github"></span>
+            </a>
+            <a href="https://www.linkedin.com/in/guillaume-dauplat-326841164/" target="_blank" rel="noopener noreferrer">
+              <span aria-hidden="true" class="fab fa-linkedin"></span>
+            </a>
+            <a href="https://www.facebook.com/guillaume.freaks" target="_blank" rel="noopener noreferrer">
+              <span aria-hidden="true" class="fab fa-facebook"></span>
+            </a>
           </div>
+          <hr>
+        </div>
       </div>
     </div>
   </section>
-  <section class="section-curriculum">
+<!--   <section class="section-curriculum" style="background-color: black;">
     <div class="bg-part-left"></div>
     <div class="container">
       <div class="row">
         <div class="col-md-4 d-flex">
           <div class="section-title">CV</div>
         </div>
-        <div class="col align-items-center d-flex bg-left-col" style="background-color: #1b1b1c">
+        <div class="col align-items-center d-flex bg-left-col" style="height: 100%;">
           <div class="timeline-container">
             <div class="timeline-item">
               <div class="timeline-point"></div>
@@ -85,5 +82,5 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 </div>
