--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -1,38 +1,28 @@
 .section-header {
   position: relative;
+  // text-align: center;
+}
+
+.section-header {
   text-align: center;
-}
-
-.section-header .full-height {
   height: 100vh;
-}
-
-.section-header .avatar-container {
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 200px;
-  margin-bottom: 20px;
 }
 
 .section-header .info-container {
   position: relative;
   padding: 1.75rem 1.75rem 0rem;
   width: 100%;
+  height: 55vh;
 }
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
+// h1 {
+//   font-size: 2em;
+//   margin: 0.67em 0;
+// }
 
 
 .section-header .info-container .info-name {
   font-size: 100px;
   line-height: 0.9;
-  margin-bottom: 1.4rem;
-  margin-top: 250px;
-  margin-right: 350px
 }
 
 .section-header .info-container .info-name .first-name {
@@ -52,15 +42,10 @@ h1 {
   font-weight: 300;
   font-size: 40px;
   color: #ba0710;
-  margin-right: 350px;
 }
 
 .section-header .info-container .info-socials {
-  position: absolute;
-  right: 1.75rem;
-  bottom: 26px;
-  margin-right: 200px;
-  margin-bottom: -13px;
+  position: relative;
 }
 
 .section-header .info-container .info-socials a{
@@ -77,84 +62,85 @@ h1 {
   color: #717273;
 }
 
-.section-header .info-container .info-socials a:hover{
-  background: #717273;
-  color: #e00d0d;
-}
+// .section-header .info-container .info-socials a:hover{
+//   background: #717273;
+//   color: #e00d0d;
+// }
 
-.section-header .info-container hr{
-  margin-top: 10px;
-  height: 2px;
-  background: #404242;
-}
+// .section-header .info-container hr{
+//   margin-top: 10px;
+//   height: 2px;
+//   background: #404242;
+// }
 
-hr {
-  border: 0;
-  margin-right: 150px;
-  margin-left: 877px;
-}
+// hr {
+//   border: 0;
+//   margin-right: 150px;
+//   margin-left: 877px;
+// }
 
-/* section cv
-*/
-.section-curriculum {
-  position: relative;
-}
+// /* section cv
+// */
+// .section-curriculum {
+//   position: relative;
+//   height: 400px;
+// }
 
-.section-curriculum .bg-left-col {
-  padding: 60px 0px 60px 40px;
-}
+// .section-curriculum .bg-left-col {
+//   padding: 60px 0px 60px 40px;
+// }
 
-.section-curriculum .timeline-container {
-  border-left-width: 2px;
-  border-left-style: solid;
-  margin-left: calc(1rem - 2px);
-  padding-left: 25px;
-  position: relative;
-  border-color: #404042;
-}
+// .section-curriculum .timeline-container {
+//   border-left-width: 2px;
+//   border-left-style: solid;
+//   margin-left: calc(1rem - 2px);
+//   padding-left: 25px;
+//   position: relative;
+//   border-color: #404042;
+// }
 
-.section-curriculum .timeline-item {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-bottom: 1.2rem;
-  position: relative;
-  font-weight: 500;
-}
-.section-curriculum .timeline-item .timeline-point {
-  background: #e00d0d;
-  height:10px ;
-  width: 10px;
-  position: absolute;
-  left: -31px;
-  top: 3px;
-  border-radius: 50%;
-}
+// .section-curriculum .timeline-item {
+//   width: 100%;
+//   padding-right: 15px;
+//   padding-left: 15px;
+//   margin-bottom: 1.2rem;
+//   position: relative;
+//   font-weight: 500;
+// }
+// .section-curriculum .timeline-item .timeline-point {
+//   background: #e00d0d;
+//   height:10px ;
+//   width: 10px;
+//   position: absolute;
+//   left: -31px;
+//   top: 3px;
+//   border-radius: 50%;
+// }
 
-.section-curriculum .timeline-item .timeframe,
-.section-curriculum .timeline-item .location {
-  opacity: 0.6;
-  font-size: 0.7rem;
-  margin-bottom: 0.4rem;
-}
+// .section-curriculum .timeline-item .timeframe,
+// .section-curriculum .timeline-item .location {
+//   opacity: 0.6;
+//   font-size: 0.7rem;
+//   margin-bottom: 0.4rem;
+// }
 
-.section-curriculum .timeline-item .heading {
-  margin-bottom: 0.4rem;
-  font-size: 1.2rem;
-  line-height: 1.45;
-  font-weight: 600;
-  color: #a4a5a6;
-  text-transform: uppercase;
-}
+// .section-curriculum .timeline-item .heading {
+//   margin-bottom: 0.4rem;
+//   font-size: 1.2rem;
+//   line-height: 1.45;
+//   font-weight: 600;
+//   color: #a4a5a6;
+//   text-transform: uppercase;
+// }
 
-.section-curriculum .timeline-item .title {
-  font-size: 0.8rem;
-  color: #a4a5a6;
-  margin-bottom: 0.4rem;
-}
+// .section-curriculum .timeline-item .title {
+//   font-size: 0.8rem;
+//   color: #a4a5a6;
+//   margin-bottom: 0.4rem;
+// }
 
-.section-curriculum .timeline-item .col {
-  font-size:0.8rem ;
-  margin-bottom: 0.55rem;
-  margin-top: 1rem;
-}
+// .section-curriculum .timeline-item .col {
+//   font-size:0.8rem ;
+//   margin-bottom: 0.55rem;
+//   margin-top: 1rem;
+// }
