--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,6 +25,22 @@
             </a>
           </div>
           <hr>
+          <div class="row">
+            <div class="flexbox">
+              <div class="col-xs-12 col-sm-4">
+                <div class="aboutme">put link for text about myself here</div>
+                <div class="vl"></div>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                <div class="myexp">put link for my exp here</div>
+                <div class="vl"></div>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                <div class="certifications">put link for my certif here</div>
+              </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
