--- a/app/assets/stylesheets/components/_flexbox.scss
+++ b/app/assets/stylesheets/components/_flexbox.scss
@@ -8,12 +8,13 @@
 }
 
 .vl {
-    border-left: 1px solid red;
+    border-left: 1px dotted red;
     height: 350px;
     position: absolute;
     right: 0;
     margin-left: -3px;
     top: 0;
+    width: 3px;
 }
 
 
