--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,12 +34,12 @@
               </div>
               <div class="col-xs-12 col-sm-4">
                 <div class="myexp">put link for my exp here</div>
-                  <%= link_to "my exp", pages_experience_path %>
+                  <%= link_to "my exp", experience_path %>
                 <div class="vl"></div>
               </div>
               <div class="col-xs-12 col-sm-4">
                 <div class="certifications">put link for my certif here</div>
-                 <%= link_to "my certif", pages_certification_path %>
+                 <%= link_to "my certif", certification_path %>
               </div>
               </div>
             </div>
