premiere mise en page des diff views ok

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="container" style="background-color: black;">
+  <div class="container-about">
+    <h1>Pages#about</h1>
+    <p>Find me in app/views/pages/about.html.erb</p>
+    <%= link_to "back to menu", root_path %>
+    <%= link_to "go to my exp", experience_path %>
+    <%= link_to "see my certifications", certification_path %>
+  </div>
+</div>
