--- a/app/views/pages/certification.html.erb
+++ b/app/views/pages/certification.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#certification</h1>
-<p>Find me in app/views/pages/certification.html.erb</p>
+<div class="container" style="background-color: black;">
+  <div class="container-certification">
+    <h1>Pages#certification</h1>
+    <p>Find me in app/views/pages/certification.html.erb</p>
+      <%= link_to "back to menu", root_path %>
+      <%= link_to "go to my exp", experience_path %>
+      <%= link_to "more about me", about_path %>
+  </div>
+</div>
