--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -6,3 +6,18 @@
   margin-right: auto;
   margin-left: auto;
 }
+
+.container-about {
+  background-color: #1b1b1c;
+  height: 95vh;
+}
+
+.container-certification {
+  background-color: #1b1b1c;
+  height: 95vh;
+}
+
+.container-experience {
+  background-color: #1b1b1c;
+  height: 95vh;
+}
