--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#experience</h1>
-<p>Find me in app/views/pages/experience.html.erb</p>
+<div class="container" style="background-color: black;">
+  <div class="container-experience">
+    <h1>Pages#experience</h1>
+    <p>Find me in app/views/pages/experience.html.erb</p>
+      <%= link_to "back to menu", root_path %>
+      <%= link_to "more about me", about_path %>
+      <%= link_to "see my certifications", certification_path %>
+  </div>
+<div>
