starting exp page

--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -1,7 +1,20 @@
 <div class="container" style="background-color: black;">
   <div class="container-experience">
-    <h1>Pages#experience</h1>
-    <p>Find me in app/views/pages/experience.html.erb</p>
+    <h1>My expriences</h1>
+    <div class="experience-item">
+      <div class="experience-point"></div>
+      <div class="row">
+        <div class="col-md-5">
+          <div class="timeframe">2018</div>
+          <div class="heading">LeWagon</div>
+          <div class="title">Full-stack Developer</div>
+          <div class="location">Marseille, France</div>
+        </div>
+        <div class="col">
+          "Porteur du projet Urbantraining, permettant de visiter la ville tout en faisant du sport."
+        </div>
+      </div>
+    </div>
       <%= link_to "back to menu", root_path %>
       <%= link_to "more about me", about_path %>
       <%= link_to "see my certifications", certification_path %>
