--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -1,6 +1,6 @@
-<div class="container" style="background-color: black;">
+<div class="container" style="background-color: #1b1b1c;">
+  <h1>My expriences</h1>
   <div class="container-experience">
-    <h1>My expriences</h1>
     <div class="experience-item">
       <div class="experience-point"></div>
       <div class="row">
