--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,17 +29,17 @@
             <div class="flexbox">
               <div class="col-xs-12 col-sm-4">
                 <div class="aboutme">put link for text about myself here</div>
-                  <%= link_to "more about me", about_path %>
+                  <%= link_to "more about me", about_path, class: "btn btn-menu" %>
                 <div class="vl"></div>
               </div>
               <div class="col-xs-12 col-sm-4">
                 <div class="myexp">put link for my exp here</div>
-                  <%= link_to "my exp", experience_path %>
+                  <%= link_to "Myxp", experience_path, class: "btn btn-menu" %>
                 <div class="vl"></div>
               </div>
               <div class="col-xs-12 col-sm-4">
                 <div class="certifications">put link for my certif here</div>
-                 <%= link_to "my certif", certification_path %>
+                  <%= link_to "Mycertif", certification_path, class: "btn btn-menu" %>
               </div>
               </div>
             </div>
