--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -6,17 +6,41 @@
       <div class="row">
         <div class="col-md-5">
           <div class="timeframe">2018</div>
+          <div class="heading">fortalezalejeu</div>
+          <div class="title">Full-stack Developer</div>
+          <div class="location">Marseille, France</div>
+        </div>
+        <div class="col">
+          "Adapation d'un jeu de société/plateau en application web"
+          <br/>
+          Ruby, Ror,CSS, HTML, JavaScript, React, Redux, Heroku
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="experience-item">
+      <div class="experience-point"></div>
+      <div class="row">
+        <div class="col-md-5">
+          <div class="timeframe">2018</div>
           <div class="heading">LeWagon</div>
           <div class="title">Full-stack Developer</div>
           <div class="location">Marseille, France</div>
         </div>
         <div class="col">
           "Porteur du projet Urbantraining, permettant de visiter la ville tout en faisant du sport."
+          <br/>
+          Ruby, RoR, CSS, HTML, JavaScript, Aajx, jQuery, Heroku
         </div>
       </div>
     </div>
-      <%= link_to "back to menu", root_path %>
-      <%= link_to "more about me", about_path %>
-      <%= link_to "see my certifications", certification_path %>
+    <br>
+    <br>
+    <br>
+      <%= link_to "back to menu", root_path, class: "btn btn-menu" %>
+      <%= link_to "more about me", about_path, class: "btn btn-menu" %>
+      <%= link_to "my certif", certification_path, class: "btn btn-menu" %>
   </div>
 <div>
